--- a/src/home.html
+++ b/src/home.html
@@ -25,7 +25,7 @@
 						</div>
 					</div>
 
-					<div class="preview__categories _text-line" data-scroll data-scroll-speed="3">
+					<div class="preview__categories _text-line" data-scroll>
 						Do you need <a href="">Design</a>, <a href="">Web Development</a>, <a href="">Branding</a>, <a href="">Applications</a>, <a href="">Marketing</a>, <a href="SEO Promotion"></a>?
 					</div>
 				</div>
