home first section

--- a/src/home.html
+++ b/src/home.html
@@ -65,7 +65,7 @@
 				</div>
 			</section>
 
-<!-- 			<section class="cases" data-scroll-section>
+<!-- 			<section class="cases">
 				<div class="cases__slider swiper">
 					<h2 class="cases__title">Cases</h2>
 					<div class="cases__wrapper swiper-wrapper">
@@ -86,9 +86,7 @@
 						<div class="cases__slide swiper-slide case-item" data-scroll>
 							<div class="case-item__image">
 								<div class="noise-image">
-									<div class="noise-image__noise"><img src="img/moon-noise.png" alt="" loading="lazy"></div>
 									<div class="noise-image__img"><img src="img/moon.svg" alt="" loading="lazy"></div>
-									<div class="noise-image__background"></div>
 								</div>
 								<div class="case-item__image-caption">– I want to say a special thank you for the mobile, it has been worked out in detail and allows you to use all the functionallity of the site on a small phone screen.</div>
 							</div>
